# telco-churn-mlops

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
config/: config.yaml
reports/: README.md
src/api/: main.py
src/data/: preprocess.py
src/models/: train.py
tests/: test_api.py  test_preprocess.py  test_train.py
